--- a/Curse_KR/Curse_KR/Pages/Index.razor
+++ b/Curse_KR/Curse_KR/Pages/Index.razor
@@ -2,8 +2,16 @@
 
 
 <PageTitle>Bridges&Co</PageTitle>
+<div class="centerAlign stret" width=100%>
 
 <h1 class="centerAlign">Добро пожаловать!</h1>
+
+	<div class="centerAlign modal-body ">
+				<center>
+				<button type="button" style="align-content:center" class="btn btn-outline-primary centerAlign container" @*@onclick="Login"*@>Авторизироваться</button>
+				</center>
+			</div>
+</div>
 
 
 
